6/2/24:
-Selected entity outline shader instead of highlight
-Removed duplicate texture asset uuid
-Script asset UI improvements
-Fixed issue with common ubo where wrong type was being converted to bytes
-Fixed material/mesh previews

5/2/24:
-Proper script binary cleanup
-General stability improvements to scripting engine
-Removed some unused headers

3/2/24:
-Fixed some issues with core engine assets not being available causing crashes
-Engine log output file

29/1/24:
-Lua dev console for editor, useful for selecting/modifying entities using conditional logic
-Rewrote some of the point/spotlight buffer code to remerge shadowed and shadowless lights and use new SSBO class
-Some bug/crash fixes

27/1/24:
-Physx overlap queries in scene
-Removed namespace collision problems from scripts, a few other improvements
-Fixed physx debug rendering causing regular meshes to stop rendering

25/1/24:
-Error handling and dead code cleanup
-Some more audio component functionality

14/1/24:
-Large voxel GI performance boost by cone tracing at half res and doing a depth-aware upsample
-Some refactoring

7/1/24:
-Improvements to anisotropic mipmapping process
-Specular cone tracing
-Performance fix to VCTGI (fixed accidentally using 4x threads for first mip)

3/1/24:
-Anisotropic mipmapping and sampling for VCTGI, currently extremely unoptimized
-General QOL keybinds/features in the editor
-Fixed material/mesh previews

29/12/23:
-Stabilized windows and docking for editor UI
-Fixed script reloading bug, made more stable in general
-Refactoring AssetManagerWindow

27/12/23:
-Banding fixed on GI
-GI voxel grid updates smoothly with camera movement

25/12/23:
-Significant performance improvements for VCT with mipmap compute shader

24/12/23:
-Voxel cone traced GI rough implementation

21/12/23:
-Audio component looping
-Script changes/compilation time optimization
-More script utilities
-General bugfixes
-Editor layer structure changes (no longer owns scene)

18/12/23: