@@ -138,9 +138,9 @@ void main() {
 	// Raymarching
 	for (int i = 0; i < u_step_count; i++) {
 		vec3 fog_sampling_coords = vec3(step_pos.x, step_pos.y, step_pos.z) / 2000.f;
-		//float fog_density = fbm(fog_sampling_coords) * u_density_coef;
-		float fog_density = 0;
-		fog_density += abs(perlin((fog_sampling_coords.xz + fog_sampling_coords.y) * 100, 1.0)) * u_density_coef *(1.0 - exp(-0.1 * abs(15 - fog_sampling_coords.y))) * 2 ;
+		float fog_density = NoiseFog(fog_sampling_coords) * u_density_coef;
+		//float fog_density = 0;
+		fog_density += u_density_coef * 0.5 ;
 
 
 		vec3 slice_light = vec3(0);
