@@ -99,7 +99,7 @@ void main() {
     vec4 albedo = CalculateAlbedoAndEmissive(vs_tex_coord.xy);
 
 	total_light += CalculateDirectLightContributionCheap(v, f0, vs_position.xyz, n, roughness, metallic, albedo.rgb);
-	//total_light += CalculateAmbientLightContribution(n_dot_v, f0, r, roughness, n, ao, metallic, albedo.rgb);
+	total_light += CalculateAmbientLightContribution(n_dot_v, f0, r, roughness, n, ao, metallic, albedo.rgb);
     vec4 color = vec4(total_light, u_material.base_color.a * albedo.w);
 
     float weight = clamp(pow(min(1.0, color.a * 10.0) + 0.01, 3.0) * 1e8 * 
